syntax = "proto3";

package shortener;

import "google/protobuf/empty.proto";

option go_package = "/shortener";

service Shortener {
  rpc Shorten (ShortenRequest) returns (ShortenResponse);
  rpc Redirect (RedirectRequest) returns (RedirectResponse);
  rpc ShortenURLs(ShortenURLsRequest) returns (ShortenURLsResponse);
  rpc ListAll(google.protobuf.Empty) returns (ListAllRequest);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc DeleteURLs(DeleteURLsRequest) returns (google.protobuf.Empty);
  rpc Stats(google.protobuf.Empty) returns (StatsResponse);
}

message ShortenRequest {
  string url = 1;
}

message ShortenResponse {
  string shortened_url = 1;
}

message RedirectRequest {
  string short_url = 1;
}

message RedirectResponse {
  string original_url = 1;
}

message ReqURL {
  string url = 1;
}

message ShortenURLsRequest {
  repeated ReqURL urls = 1;
}

message ShortenURLsResponse {
  repeated string shortened_urls = 1;
}

message List {
  string original_url = 1;
  string short_url = 2;
}

message ListAllRequest {
  repeated List URLs = 1;
}

message ShortDeleteURL {
  string short_url = 1;
}

message DeleteURLsRequest {
  repeated ShortDeleteURL short_urls = 1;
}

message StatsResponse {
  int32 URLs = 1;
  int32 Users = 2;
}